--- a/aura-base/package.json
+++ b/aura-base/package.json
@@ -15,6 +15,7 @@
     "concurrently": "^8.2.2"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "nodemon": "^3.1.10",
     "react-scripts": "^5.0.1"
   }
